jaysa.net/src/app/styles/Header.module.css
@font-face {
  font-family: '3Dventure';
  src: local('3Dventure'), url(../fonts/3Dventure.ttf) format('truetype');
}

.siteName {
  font-family: "3dventure";
  font-size: 2em;
  margin: 1rem;
}

.headerLink {
  font-family: "3dventure";
  margin: 1rem;
  text-decoration: none;
  font-size: 2rem;
}

.headerLink:visited {
  color: inherit;
}

.headerLink:hover {
  color: var(--bg2-color);
}

.container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  background-color: var(--gray);
  color: var(--bg-color);
}

@media (max-width: 674px) {
  .headerLink {
    font-size: 1.4rem;
  }
}

@media (max-width: 674px) {
  .container {
    justify-content: center;
  }
}

